tests/errors/alfa/semantic_error11.alfa
// ****Error semantico en lin X: Intento de indexacion de una variable que no es de tipo vector.
main
{
    int x, y;
    x = y[1];
	
}